feat: enhance TesteDataLoader to include Fornecedor and Pedido entities, improve product validation and relationships